# cpp_nauka

./: README.md  main.cpp
Cos/: opis.txt
nauka/moje_z9/: CMakeLists.txt
nauka/moje_z9/include/: macierz.h
nauka/moje_z9/src/: macierz.cpp  main.cpp
nauka/moje_z9/wszystko/: Makefile  macierz  macierz.cpp  macierz.h  main.cpp  we.txt  we1.txt  wy.txt
nauka/nauka1/: CMakeLists.txt
nauka/nauka1/include/: gauss.h  poisson.h  random.h  uniform.h
nauka/nauka1/src/: gauss.cpp  main.cpp  poisson.cpp  random.cpp  uniform.cpp
nauka/nauka2/: CMakeLists.txt
nauka/nauka2/include/: figura.h  kwadrat.h  okrag.h  punkt.h  trojkat.h
nauka/nauka2/src/: figura.cpp  funkcje.cpp  kwadrat.cpp  main.cpp  okrag.cpp  punkt.cpp  trojkat.cpp
openCv/program1/: prog1  program1.cpp
openCv/program2/: prog2  program2.cpp
openCv/program3/: CMakeLists.txt  prog3  program3.cpp
openCv/program4/: CMakeLists.txt  prog4  program4.cpp
openCv/program4/src/: program4.cpp
wirtualne/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
wirtualne/include/: kierownik.h  pracownik.h  robotnik.h  wizytowka.h
wirtualne/src/: kierownik.cpp  main.cpp  pracownik.cpp  robotnik.cpp  wizytowka.cpp
